implemented delete routes
