# routes/api.php
@@ -7,6 +7,7 @@ Route::get('/tokens/authorized', 'ApiTokenController@create_authorized_token');
 Route::get('/tokens/superuser', 'ApiTokenController@create_superuser_token');
 
 //Resturants
+Route::delete('/resturants/delete/{id}', 'ResturantController@destroy');
 Route::get('/resturants', 'ResturantsController@index');
 Route::get('/resturants/{id}', 'ResturantsController@show');
 Route::post('/resturants/new', 'ResturantsController@create');
@@ -15,6 +16,7 @@ Route::put('/resturants/unreport/{id}', 'ResturantsController@unreport');
 
 
 // Items
+Route::delete('/items/delete/{id}', 'ItemsController@destroy');
 Route::post('/items/new', 'ItemsController@create');
 Route::put('/items/report/{id}', 'ItemsController@report');
 Route::put('/items/unreport/{id}', 'ItemsController@unreport');
@@ -23,6 +25,7 @@ Route::get('/items', 'ItemsController@index');
 
 
 // Item Reviews
+Route::delete('/itemreviews/delete/{id}', 'ItemReviewsController@destroy');
 Route::post('/itemreviews/new', 'ItemReviewsController@create');
 Route::get('/itemreviews', 'ItemReviewsController@index');
 Route::get('/itemreviews/{id}', 'ItemReviewsController@show');
@@ -31,6 +34,7 @@ Route::put('/itemreviews/unreport/{id}', 'ItemReviewsController@unreport');
 
 
 // Resturant Reviews
+Route::delete('/itemreviews/delete/{id}', 'ItemReviewsController@destroy');
 Route::post('/resturantreviews/new', 'ResturantReviewsController@create');
 Route::get('/resturantreviews', 'ResturantReviewsController@index');
 Route::get('/resturantreviews/{id}', 'ResturantReviewsController@show');
@@ -38,6 +42,7 @@ Route::put('/resturantreviews/report/{id}', 'ResturantReviewsController@report')
 Route::put('/resturantreviews/unreport/{id}', 'ResturantReviewsController@unreport');
 
 // Resturant Images
+Route::delete('/resturantimages/delete/{id}', 'ResturantImagesController@destroy');
 Route::post('/resturantimages/new', 'ResturantImagesController@create');
 Route::get('/resturantimages', 'ResturantImagesController@index');
 Route::get('/resturantimages/{id}', 'ResturantImagesController@show');
@@ -45,6 +50,7 @@ Route::put('/resturantimages/report/{id}', 'ResturantImagesController@report');
 Route::put('/resturantimages/unreport/{id}', 'ResturantImagesController@unreport');
 
 // Item Images
+Route::delete('/itemimages/delete/{id}', 'ItemImagesController@destroy');
 Route::post('/itemimages/new', 'ItemImagesController@create');
 Route::get('/itemimages', 'ItemImagesController@index');
 Route::get('/itemimages/{id}', 'ItemImagesController@show');
